--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "extend": "~3.0.0",
     "font-awesome": "^4.7.0",
     "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
     "lodash": "^4.17.4",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
