--- a/config/manifest.json
+++ b/config/manifest.json
@@ -1,13 +1,12 @@
 {
-  "common.js": "/public/js/chunk/common.js",
   "detail/index.js": "/public/js/chunk/detail/index.js",
   "index/index.js": "/public/js/chunk/index/index.js",
   "runtime.js": "/public/js/runtime.js",
+  "img/logo.png": "/public/img/logo.png",
   "deps": {
     "detail/index.js": {
       "js": [
         "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
         "/public/js/chunk/detail/index.js"
       ],
       "css": []
@@ -15,7 +14,6 @@
     "index/index.js": {
       "js": [
         "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
         "/public/js/chunk/index/index.js"
       ],
       "css": []
