--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
+    "at-ui": "^1.3.3",
+    "at-ui-style": "^1.5.1",
     "axios": "^0.18.1",
     "cross-env": "^5.0.0",
     "css-loader": "^3.5.2",
